--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-    "name": "bae-nodejs",
-    "version": "1.0.0",
-    "author": "bae",
-    "description": "The first bae nodejs app!",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-    }
+  "name": "myblog",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www.js"
+  },
+  "dependencies": {
+    "body-parser": "~1.12.4",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.1",
+    "html-to-text": "1.3.0",
+    "express": "~4.12.4",
+    "express-session": "^1.11.2",
+    "morgan": "~1.5.3",
+    "serve-favicon": "~2.2.1",
+    "sqlite3": "~3.0.8",
+    "bluebird": "~2.9.30",
+    "dblite": "~0.7.6",
+    "qiniu": "~6.1.8"
+  }
 }
-
