--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sqlite3": "~3.0.8",
     "bluebird": "~2.9.30",
     "dblite": "~0.7.6",
-    "qiniu": "~6.1.8"
+    "qiniu": "~6.1.8",
+    "formidable": "~1.0.17"
   }
 }
