优化了代码结构，routes中的逻辑处理交由controller，增加了私密日志的功能,编辑文章时可以插入HTML

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /public/res/*.jpeg
 /public/res/*.bmp
 /public/res/*.png
+/public/res/*.gif
+/public/res/*.htm
+/public/res/*.html
+/test/config
+/test/mytest.js
