--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "myblog",
-  "version": "0.0.0",
+  "name": "bat",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www.js"
