在内存中存储session采用lru策略，优化了记录博客访问量和文章访问量的逻辑,静态文件url加上了前缀public

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qiniu": "~6.1.8",
     "formidable": "~1.0.17",
     "marked": "~0.3.5",
-    "highlight.js": "~8.7.0"
+    "highlight.js": "~8.7.0",
+    "lru-cache": "~2.7.0"
   }
 }
