--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "start": "node ./bin/www.js"
   },
   "dependencies": {
+    "bluebird": "~2.9.30",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
+    "dblite": "~0.7.6",
     "debug": "~2.2.0",
     "ejs": "~2.5.5",
-    "html-to-text": "1.3.0",
     "express": "~4.12.4",
     "express-session": "^1.11.2",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
-    "sqlite3": "~3.0.8",
-    "bluebird": "~2.9.30",
-    "dblite": "~0.7.6",
-    "qiniu": "~6.1.8",
     "formidable": "~1.0.17",
-    "marked": "~0.3.5",
     "highlight.js": "~8.7.0",
-    "lru-cache": "~2.7.0"
+    "html-to-text": "1.3.0",
+    "lru-cache": "~2.7.0",
+    "marked": "~0.3.5",
+    "morgan": "~1.5.3",
+    "qiniu": "~6.1.8",
+    "serve-favicon": "~2.2.1",
+    "sqlite3": "^4.0.2"
   }
 }
