--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "start": "node ./bin/www.js"
   },
   "dependencies": {
-    "bluebird": "~2.9.30",
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "dblite": "~0.7.6",
-    "debug": "~2.2.0",
-    "ejs": "~2.5.5",
-    "express": "~4.12.4",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "dblite": "^0.10.0",
+    "debug": "^3.1.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
     "express-session": "^1.11.2",
-    "formidable": "~1.0.17",
-    "highlight.js": "~8.7.0",
-    "html-to-text": "1.3.0",
-    "lru-cache": "~2.7.0",
-    "marked": "~0.3.5",
-    "morgan": "~1.5.3",
-    "qiniu": "~6.1.8",
-    "serve-favicon": "~2.2.1",
+    "formidable": "^1.2.1",
+    "highlight.js": "^9.12.0",
+    "html-to-text": "^4.0.0",
+    "lru-cache": "^4.1.3",
+    "marked": "^0.5.0",
+    "morgan": "^1.9.0",
+    "npm": "^6.4.0",
+    "qiniu": "^7.2.1",
+    "serve-favicon": "^2.5.0",
     "sqlite3": "^4.0.2"
   }
 }
